// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Configurations > createOrUpdateConfiguration (PUT /configurations/:name) > snapshot > matches expected response shape 1`] = `
{
  "configuration": {
    "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
    "entrypoint": "app.py",
    "files": [
      "app.py",
      "requirements.txt",
    ],
    "python": {
      "packageFile": "requirements.txt",
      "packageManager": "pip",
      "version": "3.11.3",
    },
    "type": "python-fastapi",
  },
  "configurationName": "new-config",
  "configurationPath": "/workspace/.posit/publish/new-config.toml",
  "configurationRelPath": ".posit/publish/new-config.toml",
  "projectDir": "/workspace",
}
`;

exports[`Configurations > getConfiguration (GET /configurations/:name) > snapshot > matches expected response shape 1`] = `
{
  "configuration": {
    "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
    "entrypoint": "app.py",
    "files": [
      "app.py",
      "requirements.txt",
    ],
    "python": {
      "packageFile": "requirements.txt",
      "packageManager": "pip",
      "version": "3.11.3",
    },
    "type": "python-fastapi",
  },
  "configurationName": "my-app",
  "configurationPath": "/workspace/.posit/publish/my-app.toml",
  "configurationRelPath": ".posit/publish/my-app.toml",
  "projectDir": "/workspace",
}
`;

exports[`Configurations > getConfigurations (GET /configurations) > snapshot > matches expected response shape 1`] = `
[
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "entrypoint": "app.py",
      "files": [
        "app.py",
        "requirements.txt",
      ],
      "python": {
        "packageFile": "requirements.txt",
        "packageManager": "pip",
        "version": "3.11.3",
      },
      "type": "python-fastapi",
    },
    "configurationName": "my-app",
    "configurationPath": "/workspace/.posit/publish/my-app.toml",
    "configurationRelPath": ".posit/publish/my-app.toml",
    "projectDir": "/workspace",
  },
  {
    "configuration": {
      "$schema": "https://cdn.posit.co/publisher/schemas/posit-publishing-schema-v3.json",
      "entrypoint": "notebook.ipynb",
      "files": [
        "notebook.ipynb",
        "requirements.txt",
      ],
      "python": {
        "packageFile": "requirements.txt",
        "packageManager": "pip",
        "version": "3.11.3",
      },
      "type": "jupyter-notebook",
    },
    "configurationName": "my-notebook",
    "configurationPath": "/workspace/.posit/publish/my-notebook.toml",
    "configurationRelPath": ".posit/publish/my-notebook.toml",
    "projectDir": "/workspace",
  },
]
`;
